Minor change to About content; fixed header size for posts on mobile.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -224,7 +224,7 @@ a.post-link {
     // line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 26px;
     }
 }
 
@@ -239,7 +239,7 @@ a.post-link {
         font-size: 20px;
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+            font-size: 20px;
         }
     }
 
@@ -247,7 +247,7 @@ a.post-link {
         font-size: 18px;
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+            font-size: 18px;
         }
     }
 
@@ -255,7 +255,7 @@ a.post-link {
         font-size: 14px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            font-size: 14px;
         }
     }
 }
